
2013-05-15
- cli/cmd.h cli/cmdedit.c cli/cmdmain.c: Make console ctl-C behaviour
  like other shells. (RFB)

2013-05-17
- cli/cmdint.c cli/cmdutil.c: Fix bugs in console copy command. (RFB)
- cli/cmdint.c: Fix bug: move command copied instead of moving. (RFB)

2013-05-19
- cli/cmdint.c: Fix crash in wrap command. (RFB)
- cli/cmdutil.c: Fix strequal() to properly ignore case. (RFB)

2013-05-21
- aes/optimize.c: Fix crash with non-standard filenames from Hatari. (RFB)

2013-05-25
- po/gr.po: Updated Greek translation. Contributed by Christos Tziotzis. (VRI)

2013-05-27
- tools/bug.c: Fixed warning about unused variable line_start. (VRI)

2013-05-28
- cli/cmd.h cli/cmdedit.c cli/cmdexec.c cli/cmdint.c cli/cmdmain.c
  cli/cmdutil.c: Added more const keywords. (VRI)
- tools/mkrom.c: Fixed for 64-bit systems. Suggested by Radoslaw Kujawa. (VRI)
- po/gr.po: Fixed long strings. Contributed by Christos Tziotzis. (VRI)

2013-05-30
- aes/gemshlib.c bios/bios.c cli/coma.S cli/command.c: Removed source
  files and code references for old console. (RFB)
- cli/cmdmain.c: Display blank line after welcome message. (RFB)

2013-06-03
- doc/resource.txt doc/todo.txt: Minor documentation updates and
  corrections. (RFB)
- doc/announce.txt: Updated for release 0.9.1. (RFB)

2013-06-04
- po/cs.po: Updated Czech translation. Contributed by Pavel Salač. (VRI)

2013-06-05
- doc/*: Updated. (VRI)

2013-06-08
- bios/vt52.c: Fixed compilation when !CONF_SERIAL_CONSOLE_ANSI. (VRI)

2013-06-13
- bios/ikbd.c: More accurate comment about IKBD reset. (VRI)

2013-06-16
- doc/announce.txt: Updated. Contributed by Eero Tamminen. (VRI)
- bios/linea.S: On unimplemented Line-A function, display a debug trace instead
  of calling panic(). Suggested by David Savinkoff. (VRI)

2013-06-19
- cli/cmdint.c: Fix panic when 'echo'ing control character. (RFB)
- cli/cmdint.c: Remove the internal command 'rem'. (RFB)
- cli/cmdint.c cli/cmdutil.c: Small optimisation for eol handling. (RFB)