@@ -210,9 +210,6 @@ WORD get_path_component(char **pp,char *dest);
 WORD has_wildcard(const char *name);
 void message(const char *msg);
 void messagenl(const char *msg);
-void output(const char *s);
-void outputnl(const char *s);
-LONG outputbuf(const char *s,LONG len);
 const char *program_extension(const DTA *dta);
 WORD strequal(const char *s1,const char *s2);
 char *strlower(char *str);
