@@ -104,91 +104,6 @@ const char *p;
 }
 
 /*
- *  output a redirectable string
- */
-void output(const char *s)
-{
-    if (redir_handle < 0L)
-        message(s);
-    else Fwrite((WORD)redir_handle,strlen(s),s);
-}
-
-/*
- *  output a redirectable string with a newline
- */
-void outputnl(const char *s)
-{
-    output(s);
-    output("\r\n");
-}
-
-/*
- *  handle control-C
- */
-PRIVATE WORD user_break(void)
-{
-char c;
-
-    c = conin() & 0xff;
-    if (c == CTL_C)         /* user wants to interrupt */
-        return -1;
-
-    return 0;
-}
-
-/*
- *  check for flow control or control-C
- */
-PRIVATE WORD user_input(void)
-{
-char c;
-
-    c = conin() & 0xff;
-    if (c == CTL_C)         /* user wants to interrupt */
-        return -1;
-
-    if (c == CTL_S) {       /* user wants to pause */
-        while(1) {
-            c = conin() & 0xff;
-            if (c == CTL_C)
-                return -1;
-            if (c == CTL_Q)
-                break;
-        }
-    }
-
-    return 0;
-}
-
-/*
- *  output a redirectable fixed-length buffer
- */
-LONG outputbuf(const char *s,LONG len)
-{
-LONG n, rc;
-
-    if (redir_handle < 0L) {
-        n = len;
-        while(n-- > 0) {
-            if (constat())
-                if (user_input())
-                    return USER_BREAK;
-            conout(*s++);
-        }
-        return len;
-    }
-
-    rc = Fwrite((WORD)redir_handle,len,s);
-    if (rc >= 0) {
-        if (constat())
-            if (user_break())
-                return USER_BREAK;
-    }
-
-    return rc;
-}
-
-/*
  *  convert a string to lowercase
  */
 char *strlower(char *str)
